# mantle

./: .gitignore  Cargo.toml  LICENSE  LOG_DUMP.md  README.md  RELEASE_GUIDE.md  bump-version.ps1  package.json  pnpm-lock.yaml  rocat.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration-tests.yml  release.yml
docs/: .gitignore  README.md  docusaurus.config.js  nodemon.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
docs-2/: .gitignore  package.json  pnpm-lock.yaml  theme.config.jsx  tsconfig.json  turbo.json  vercel.json
docs-2/components/: feature.tsx  latest-schema-reference.tsx  latest-schema.tsx  schema-reference.tsx  tooltip.tsx
docs-2/lib/: flatten-schema-properties.ts  schemas.ts
docs-2/pages/: _meta.json  index.mdx
docs-2/scripts/: package.json
docs-2/site/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
docs/compile-templates/: flattenProperties.ts  index.ts  simplifySchemaMarkdown.ts
docs/docs/: authentication.md  commands.md  configuration.hbs  continuous-deployment.md  getting-started.md  installation.md  introduction.md  remote-state.md
docs/scripts/: tsconfig.json
docs/site/: .gitignore  package.json  tailwind.config.js  theme.config.jsx  tsconfig.json
examples/: .gitignore  LICENSE  README.md  foreman.toml
gen_schema/: Cargo.toml
integration_executor/: Cargo.toml
integration_executor/src/: context.rs  files.rs  images.rs  lib.rs  working_dir.rs
logger/: Cargo.toml
mantle/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
mantle/config_expressions/: Cargo.toml  demo.yml
mantle/config_expressions/src/: lib.rs  main.rs
mantle/derive_resource/: Cargo.toml
mantle/derive_resource/src/: lib.rs
mantle/gen_schema/src/: main.rs
mantle/integration_executor/src/: lib.rs
mantle/logger/src/: lib.rs
mantle/mantle/: Cargo.toml
mantle/mantle/src/: cli.rs  main.rs
mantle/mantle/src/commands/: deploy.rs  destroy.rs  diff.rs  download.rs  import.rs  mod.rs  outputs.rs  upload.rs
mantle/project-fixtures/light/: .mantle-state.yml  mantle.yml
mantle/rbx_api/: CHANGELOG.md  Cargo.toml  README.md
mantle/rbx_api/src/: errors.rs  helpers.rs  lib.rs  models.rs  multipart_middleware.rs
mantle/rbx_api/src/asset_aliases/: mod.rs  models.rs
mantle/rbx_api/src/asset_permissions/: mod.rs  models.rs
mantle/rbx_api/src/assets/: mod.rs  models.rs
mantle/rbx_api/src/badges/: mod.rs  models.rs
mantle/rbx_api/src/developer_products/: mod.rs  models.rs
mantle/rbx_api/src/experiences/: mod.rs  models.rs
mantle/rbx_api/src/game_passes/: mod.rs  models.rs
mantle/rbx_api/src/groups/: mod.rs  models.rs
mantle/rbx_api/src/notifications/: mod.rs  models.rs
mantle/rbx_api/src/places/: mod.rs  models.rs
mantle/rbx_api/src/social_links/: mod.rs  models.rs
mantle/rbx_api/src/spatial_voice/: mod.rs  models.rs
mantle/rbx_api/src/thumbnails/: mod.rs
mantle/rbx_api/src/user/: mod.rs  models.rs
mantle/rbx_auth/: Cargo.toml  README.md
mantle/rbx_auth/src/: lib.rs  main.rs
mantle/rbx_cookie/: Cargo.toml  README.md
mantle/rbx_cookie/src/: binarycookies.rs  lib.rs  main.rs
mantle/rbx_mantle/: CHANGELOG.md  Cargo.toml
mantle/rbx_mantle/src/: config.rs  lib.rs  project.rs  repo.rs  resource_graph.rs  resource_graph_v2.rs  resources.rs  roblox_resource_manager.rs
mantle/rbx_mantle/src/resource_graph_v2/: evaluator.rs  mod.rs
mantle/rbx_mantle/src/resource_graph_v3/: evaluator.rs  evaluator_results.rs  mod.rs
mantle/rbx_mantle/src/resources/: experience.rs  mod.rs  place.rs
mantle/rbx_mantle/src/resources_v2/: experience.rs  mod.rs  notes.txt  place.rs
mantle/rbx_mantle/src/state/: aws_credentials_provider.rs  mod.rs  v1.rs  v3.rs  v4.rs  v5.rs  v6.rs
mantle/specs/: first_spec.yml  game_passes.yml  thumbnails.yml
mantle/src/: cli.rs  main.rs
mantle/src/commands/: deploy.rs  destroy.rs  import.rs  mod.rs  outputs.rs  upload.rs
mantle/tests/: integration.rs
project-fixtures/: .rocat-state.yml  multi-file.toml  multi-file.yml  single-file.toml  single-file.yml
project-fixtures/dev/: .mantle-state.yml  backup.mantle-state.yml  mantle.yml  rocat.yml
project-fixtures/light/: .mantle-state.yml  mantle.yml
project-fixtures/multi-places/: .rocat-state.yml  rocat.yml
project-fixtures/single-place/: .rocat-state.yml  rocat.yml
rbx_api/: CHANGELOG.md  Cargo.toml
rbx_api/src/: asset_aliases.rs  assets.rs  badges.rs  developer_products.rs  errors.rs  experiences.rs  game_passes.rs  helpers.rs  lib.rs  models.rs  places.rs  social_links.rs  thumbnails.rs
rbx_api/src/asset_aliases/: mod.rs
rbx_api/src/asset_permissions/: mod.rs
rbx_api/src/assets/: mod.rs  models.rs
rbx_api/src/badges/: mod.rs  models.rs
rbx_api/src/developer_products/: mod.rs  models.rs
rbx_api/src/experiences/: mod.rs  models.rs
rbx_api/src/game_passes/: mod.rs  models.rs
rbx_api/src/spatial_voice/: mod.rs
rbx_api/src/thumbnails/: mod.rs  models.rs
rbx_auth/: Cargo.toml  README.md
rbx_auth/examples/: check_auth.rs
rbx_auth/src/: lib.rs  main.rs  test_csrf_expiry.rs
rbx_cookie/: Cargo.toml
rbx_cookie/src/: binarycookies.rs  lib.rs  main.rs  wincred.rs
rbx_mantle/: Cargo.toml
rbx_mantle/src/: config.rs  lib.rs  project.rs  resource_graph.rs  roblox_api.rs  roblox_auth.rs  roblox_resource_manager.rs
rbx_mantle_resource_graph/: Cargo.toml
rbx_mantle_resource_graph/src/: lib.rs  macros.rs  resource.rs  resource_graph.rs  resource_graph_evaluator.rs  resource_manager.rs
rbx_resource_manager/: Cargo.toml
rbx_resource_manager/src/: lib.rs  resource.rs  v3.rs  v4.rs
specs/: game_passes.yml  schema.json  start_place.yml  thumbnails.yml
src/: cli.rs  config.rs  logger.rs  main.rs  project.rs  resource_graph.rs  resource_manager.rs  resource_reconciler.rs  resources.rs  roblox_api.rs  roblox_auth.rs  roblox_resource_manager.rs  safe_resource_manager.rs  safe_resources.rs  safe_state.rs  schema.rs  state.rs  util.rs
src/commands/: deploy.rs  destroy.rs  download.rs  import.rs  mod.rs  outputs.rs  publish.rs  (+3 more)
(+83 files in other folders)
