[package]
name = "mantle"
version = "0.10.1"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = { version = "1.0.59" }
serde_yaml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"
reqwest = { version = "0.11.6", features = ["cookies", "json", "multipart", "stream"] }
cookie = "0.15.1"
glob = "0.3.0"
mime_guess = "2.0.3"
sha2 = "0.9.8"
difference = "2.0.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.9"
async-trait = "0.1.51"
chrono = "0.4"
yansi = "0.5.0"
scraper = "0.12.0"
url = { version = "2.2.2", features = ["serde"] }
base64 = "0.13.0"
serde_repr = "0.1.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
