[package]
name = "rbx_mantle"
description = "Infra-as-code for Roblox"
homepage = "https://mantle-docs.vercel.app"
repository = "https://github.com/blake-mealey/mantle"
version = "0.11.0"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
license = "MIT"
edition = "2018"
include = [
    "src",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[[bin]]
name = "mantle"
path = "src/main.rs"

[[bin]]
name = "schema"
path = "src/schema.rs"

[lib]
path = "src/lib/mod.rs"

[dependencies]
serde_json = { version = "1.0.59" }
serde_yaml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"
reqwest = { version = "0.11.6", features = ["cookies", "json", "multipart", "stream"] }
cookie = "0.15.1"
glob = "0.3.0"
mime_guess = "2.0.3"
sha2 = "0.9.8"
difference = "2.0.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.9"
async-trait = "0.1.51"
chrono = "0.4"
yansi = "0.5.0"
scraper = "0.12.0"
url = { version = "2.2.2", features = ["serde"] }
base64 = "0.13.0"
serde_repr = "0.1.7"
log = "0.4.14"
env_logger = "0.9.0"
schemars = { version = "=0.8.8-blake.2", git = "https://github.com/blake-mealey/schemars", branch = "raw-comments", features = ["derive", "url", "preserve_order"] }
dirs = "1.0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.3.1"
