[package]
name = "gen_schema"
version = "0.11.1"
edition = "2021"

[dependencies]
rbx_mantle = { path = "../rbx_mantle" }

serde_json = { version = "1.0.59" }
schemars = { version = "=0.8.8-blake.2", git = "https://github.com/blake-mealey/schemars", branch = "raw-comments", features = ["derive", "url", "preserve_order"] }
