[package]
name = "integration_executor"
version = "0.1.0"
edition = "2021"


[dependencies]
rbx_mantle = { path = "../rbx_mantle" }

serde_yaml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }

rand = "0.8.5"

image = "0.24.2"
imageproc = "0.23.0"
rusttype = "0.9.2"

rbx_xml = "0.12.3"
rbx_binary = "0.6.4"
rbx_dom_weak = "2.4.0"

test_bin = "0.4.0"
