[package]
name = "mantle"
version = "0.11.1"
edition = "2021"

[dependencies]
rbx_mantle = { path = "../rbx_mantle" }

serde_json = { version = "1.0.59" }
serde_yaml = { version = "0.8" }
clap = "2.33.0"
tokio = { version = "1", features = ["full"] }
yansi = "0.5.0"
log = "0.4.14"
env_logger = "0.9.0"
