[package]
name = "rbx_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rbx_auth = { path = "../rbx_auth" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.59" }
serde_repr = "0.1.7"

scraper = "0.12.0"
reqwest = { version = "0.11.6", features = ["cookies", "json", "multipart", "stream"] }
url = { version = "2.2.2", features = ["serde"] }
mime_guess = "2.0.3"
base64 = "0.13.0"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
