[package]
name = "rbx_auth"
description = "Constructs params for making authenticated requests to Roblox APIs"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/blake-mealey/mantle/tree/main/rbx_auth"
repository = "https://github.com/blake-mealey/mantle"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
license = "MIT"
include = [
    "src",
    "Cargo.toml",
    "README.md"
]

[dependencies]
rbx_cookie = { path = "../rbx_cookie", version = "0.1.2" }

thiserror = "1.0.31"

url = { version = "2.2.2" }
reqwest = { version = "0.11.6", features = ["cookies"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "check_auth"
