[package]
name = "rbx_auth"
description = "Constructs params for making authenticated requests to Roblox APIs"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/blake-mealey/mantle/tree/main/rbx_auth"
repository = "https://github.com/blake-mealey/mantle"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
license = "MIT"
include = [
    "src",
    "Cargo.toml",
    "README.md"
]

[dependencies]
rbx_cookie = { path = "../rbx_cookie", version = "0.1.2" }

thiserror = "1.0.31"

url = { version = "2.2.2" }
reqwest = { version = "0.11.6", features = ["cookies"] }

log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.0"

tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.59" }
