[package]
name = "rbx_cookie"
description = "Access the ROBLOSECURITY cookie from your environment"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/blake-mealey/mantle/tree/main/rbx_cookie"
repository = "https://github.com/blake-mealey/mantle"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
license = "MIT"
include = [
    "src",
    "Cargo.toml",
    "README.md"
]

[dependencies]
cookie = "0.15.1"
dirs = "1.0.4"
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
winapi = { version = "0.3.9", features = ["wincred", "impl-default"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.3.1"
