[package]
name = "config_expressions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cel-interpreter = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.47"
