[package]
name = "rbx_mantle"
description = "Infra-as-code for Roblox"
version = "0.11.15"
homepage = "https://mantledeploy.vercel.app"
repository = "https://github.com/blake-mealey/mantle"
authors = ["Blake Mealey <blakemealey@gmail.com>"]
license = "MIT"
edition = "2021"
include = ["src", "Cargo.toml"]

[dependencies]
rbx_auth = { path = "../rbx_auth" }
rbx_api = { path = "../rbx_api" }
logger = { path = "../logger" }

serde_yaml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"
glob = "0.3.0"
sha2 = "0.9.8"
difference = "2.0.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
chrono = "0.4"
yansi = "0.5.0"
url = { version = "2.2.2", features = ["serde"] }
log = "0.4.14"
schemars = { version = "=0.8.8-blake.2", git = "https://github.com/blake-mealey/schemars", branch = "raw-comments", features = [
    "derive",
    "url",
    "preserve_order",
] }
rbxcloud = "0.13.0"
